@@ -1145,117 +1145,10 @@ function device_javascript() {
 		var ping_timeout = $('#ping_timeout').val();
 		var ping_retries = $('#ping_retries').val();
 
-		function setPing() {
-			if ($('#row_host_avail_head').hasClass('collapsed')) {
-				return false;
-			}
-
-			availability_method = $('#availability_method').val();
-			ping_method = $('#ping_method').val();
-			use_snmp = availability_method == 2 || availability_method == 5 || availability_method == 6;
-
-			toggleFields({
-				ping_method: !use_snmp && ping_method >= 1,
-				ping_port: !use_snmp && ping_method > 1,
-				ping_timeout: use_snmp || ping_method >= 1,
-				ping_retries: use_snmp || ping_method >= 1,
-			});
-		}
-
-		function setAvailability() {
-			if ($('#row_host_avail_head').hasClass('collapsed')) {
-				return false;
-			}
-
-			if ($('#snmp_version').val() == '0') {
-				methods = [{
-						value: '0',
-						text: '<?php print __('None'); ?>'
-					},
-					{
-						value: '3',
-						text: '<?php print __('Ping'); ?>'
-					}
-				];
-
-				if ($('#availability_method').val() != '3' && $('#availability_method').val() != '0') {
-					$('#availability_method').val('3');
-				}
-
-				$('#availability_method').replaceOptions(methods, $('#availability_method').val());
-			} else {
-				methods = [{
-						value: '0',
-						text: '<?php print __('None'); ?>'
-					},
-					{
-						value: '1',
-						text: '<?php print __('Ping and SNMP Uptime'); ?>'
-					},
-					{
-						value: '2',
-						text: '<?php print __('SNMP Uptime'); ?>'
-					},
-					{
-						value: '3',
-						text: '<?php print __('Ping'); ?>'
-					},
-					{
-						value: '4',
-						text: '<?php print __('Ping or SNMP Uptime'); ?>'
-					},
-					{
-						value: '5',
-						text: '<?php print __('SNMP Desc'); ?>'
-					},
-					{
-						value: '6',
-						text: '<?php print __('SNMP GetNext'); ?>'
-					}
-				];
-
-				$('#availability_method').replaceOptions(methods, $('#availability_method').val());
-			}
-
-			var availability_method = $('#availability_method').val();
-			var canPing = true;
-			if (availability_method == 0 ||
-				availability_method == 2 ||
-				availability_method == 5 ||
-				availability_method == 6) {
-				$('#ping_method').val('1');
-				canPing = false;
-			}
-
-			toggleFields({
-				ping_method: availability_method != 1 && availability_method != 3 && availability_method != 4,
-				ping_timeout: canPing,
-				ping_port: canPing,
-				ping_retries: canPing,
-			})
-		}
-
-		if ($('#ping_method').selectmenu('instance')) {
-			$('#ping_method').selectmenu('refresh');
-		}
-
-		if ($('#availability_method').selectmenu('instance')) {
-			$('#availability_method').selectmenu('refresh');
-		}
-
 		function changeHostForm() {
 			setSNMP();
 			setAvailability();
 			setPing();
-		}
-
-		function hostPageLoad(strURL) {
-			var scrollTop = $(window).scrollTop();
-			$.get(strURL, function(data) {
-				$('#main').html(data);
-				applySkin();
-				$(window).scrollTop(scrollTop);
-			});
 		}
 
 		$(function() {
